implement serve remix

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Yuki Ikegaya",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "@remix-run/node": "^2.17.0",
     "@remix-run/react": "^2.17.0",
