--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "remix-serve build/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "fmt": "prettier --write '**/*.{js,jsx,ts,tsx,json,md}'"
   },
   "keywords": [],
   "author": "Yuki Ikegaya",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^2.17.0",
+    "prettier": "^3.6.2",
     "vite": "^6.3.5"
   }
 }
