--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,14 @@
     "@remix-run/node": "^2.17.0",
     "@remix-run/react": "^2.17.0",
     "@remix-run/serve": "^2.17.0",
+    "@tailwindcss/vite": "^4.1.12",
+    "autoprefixer": "^10.4.21",
+    "flowbite-react": "^0.12.7",
     "isbot": "^4.4.0",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.17.0",
