--- a/compose.yml
+++ b/compose.yml
@@ -25,7 +25,7 @@ services:
       - "4000:4000"
     volumes:
       - ./backend:/app
-    command: npm run start:dev
+    command: sh -c "npx prisma generate && npm run start:dev"
 
   grownote-frontend:
     build:
