--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "autoprefixer": "^10.4.21",
     "isbot": "^4.4.0",
+    "jotai": "^2.13.1",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
