--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@remix-run/serve": "^2.17.0",
     "@tailwindcss/vite": "^4.1.12",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
     "isbot": "^4.4.0",
     "jotai": "^2.13.1",
     "postcss": "^8.5.6",
